# EveryRockBeatEver

./: Dockerfile  Procfile  README.md  dotenv_template.txt  requirements.txt  setup.cfg
EveryRockBeatEver/: __init__.py  db.py  functions.py  views.py
EveryRockBeatEver/_static/: generate_style.css  html_form_fields.json  index_style.css  rock_presets_template.json  user_presets_template.json
EveryRockBeatEver/_static/note_imgs/: 3rd_16th.xcf  3rd_8th.xcf  4th_16th.xcf  4th_1st(Whole).xcf  4th_2nd(Half).xcf  4th_32nd.xcf  4th_4th(Quarter).xcf  4th_8th.xcf  5th_16th.xcf  5th_32nd.xcf  5th_8th.xcf  7th_16th.xcf  7th_32nd.xcf  7th_8th.xcf  9th_16th.xcf  9th_8th.xcf
EveryRockBeatEver/templates/: about.html  base.html  index.html  randomize.html  step1.html  step2.html  stepx_generate.html  tutorial.html
assets/samples/: user_presets.json
tests/: conftest.py  test_db.py  test_factory.py  test_functions.py
theory/: BREAKABILITY.md  ML_OPS.md  RHYTHM_SPACE.md  Rhythm_Space_NQE_Theory.ipynb
theory/resources/: RockBeat.gp  rhythmic_space-bar_fractions.gp  rhythmic_space-bar_fractions.mid  rhythmic_space-bar_fractions2.gp  test.gp  test.mid
