[metadata]
name = EveryRockBeatEver
version = 1.0.0
url = https://github.com/cbradiodrums/EveryRockBeatEver
license = GNU-v3
maintainer = Chris Burrows
maintainer_email = https://www.linkedin.com/in/burrowschristopherm/
description = Customize Parameters to Generate a Random MIDI Drum Beat!
long_description = file: README.MD

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    EveryRockBeatEver
